--- a/Practice1.html
+++ b/Practice1.html
@@ -35,7 +35,7 @@
     <dd>Cascade Style Sheets</dd>
 </dl>
 
-<a href="Practice.html">Go back</a>
+<a href="index.html">Go back</a>
 <body>
     
 </body>
